Bug 1713748 - Partition WebSocket nsWSAdmissionManager queue. r=timhuang,nhnt11
Differential Revision: https://phabricator.services.mozilla.com/D119534

UltraBlame original commit: 22e2e65e5b2da71bab9ac1faeb386ee90a69246f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -63163,6 +63163,35 @@ mirror
 :
 always
 #
+Partition
+the
+websocket
+pending
+connection
+queue
+by
+OriginAttributes
+.
+-
+name
+:
+privacy
+.
+partition
+.
+network_state
+.
+ws_connection_queue
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
 The
 global
 switch
