Bug 1713748 - Added test for websocket connection queue. r=timhuang,nhnt11
Differential Revision: https://phabricator.services.mozilla.com/D119901

UltraBlame original commit: 3de943e6b35d15550f66b30a2b93f1ca192e72d9

--- a/toolkit/components/antitracking/test/browser/browser.ini
+++ b/toolkit/components/antitracking/test/browser/browser.ini
@@ -1182,6 +1182,37 @@ file_video
 .
 ogv
 [
+browser_staticPartition_websocket
+.
+js
+]
+skip
+-
+if
+=
+os
+=
+=
+'
+mac
+'
+&
+&
+webrender
+&
+&
+verify
+#
+Bug
+1721210
+support
+-
+files
+=
+file_ws_handshake_delay_wsh
+.
+py
+[
 browser_partitionedClearSiteDataHeader
 .
 js
