Bug 1717627 - Move Linux devtools tests to WebRender. r=ahal
--- target_task_setd009f0738a
+++ target_task_setao_ci_linux_devtools
+test-linux1804-64-asan-qr/opt-mochitest-devtools-chrome-e10s
-test-linux1804-64-asan/opt-mochitest-devtools-chrome-e10s
+test-linux1804-64-qr/debug-mochitest-devtools-chrome-e10s
+test-linux1804-64-qr/debug-mochitest-devtools-chrome-fis-e10s
+test-linux1804-64-qr/debug-mochitest-devtools-chrome-swr-e10s
+test-linux1804-64-qr/opt-mochitest-devtools-chrome-e10s
+test-linux1804-64-qr/opt-mochitest-devtools-chrome-fis-e10s
-test-linux1804-64/debug-mochitest-devtools-chrome-e10s
-test-linux1804-64/debug-mochitest-devtools-chrome-fis-e10s
-test-linux1804-64/opt-mochitest-devtools-chrome-a11y-checks-e10s
-test-linux1804-64/opt-mochitest-devtools-chrome-e10s
-test-linux1804-64/opt-mochitest-devtools-chrome-fis-e10s
+test-macosx1015-64-qr/debug-mochitest-devtools-chrome-e10s

mozilla-central

--- target_task_setd009f0738a
+++ target_task_setao_ci_linux_devtools
+test-linux1804-64-asan-qr/opt-mochitest-devtools-chrome-e10s
-test-linux1804-64-asan/opt-mochitest-devtools-chrome-e10s
+test-linux1804-64-ccov-qr/opt-mochitest-devtools-chrome-e10s
-test-linux1804-64-ccov/opt-mochitest-devtools-chrome-e10s
+test-linux1804-64-qr/debug-mochitest-devtools-chrome-e10s
+test-linux1804-64-qr/debug-mochitest-devtools-chrome-fis-e10s
+test-linux1804-64-qr/debug-mochitest-devtools-chrome-swr-e10s
+test-linux1804-64-shippable-qr/opt-mochitest-devtools-chrome-e10s
+test-linux1804-64-shippable-qr/opt-mochitest-devtools-chrome-fis-e10s
-test-linux1804-64-shippable/opt-mochitest-devtools-chrome-a11y-checks-e10s
-test-linux1804-64-shippable/opt-mochitest-devtools-chrome-e10s
-test-linux1804-64-shippable/opt-mochitest-devtools-chrome-fis-e10s
-test-linux1804-64/debug-mochitest-devtools-chrome-e10s
-test-linux1804-64/debug-mochitest-devtools-chrome-fis-e10s
+test-macosx1015-64-qr/debug-mochitest-devtools-chrome-e10s

Differential Revision: https://phabricator.services.m

--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -1515,6 +1515,30 @@ os
 "
 win
 "
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
 [
 browser_dbg
 -
@@ -2157,19 +2181,6 @@ if
 =
 !
 serviceworker_e10s
-|
-|
-(
-os
-=
-=
-'
-linux
-'
-&
-&
-ccov
-)
 #
 parent
 intercept
@@ -2189,7 +2200,36 @@ on
 Linux
 coverage
 builds
+and
+WR
+debug
+builds
 .
+(
+os
+=
+=
+'
+linux
+'
+&
+&
+(
+ccov
+|
+|
+(
+webrender
+&
+&
+!
+swgl
+&
+&
+debug
+)
+)
+)
 [
 browser_dbg
 -
