--- a/devtools/client/inspector/animation/test/browser.ini
+++ b/devtools/client/inspector/animation/test/browser.ini
@@ -272,11 +272,13 @@ skip
 -
 if
 =
+(
 apple_catalina
 &
 &
 !
 debug
+)
 #
 Disabled
 in
@@ -286,6 +288,33 @@ Bug
 Intemittent
 bug
 :
+Bug
+1665011
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+debug
+&
+&
+!
+asan
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
 Bug
 1665011
 [
@@ -621,8 +650,6 @@ skip
 if
 =
 debug
-|
-|
 (
 os
 =
@@ -636,6 +663,33 @@ bits
 =
 =
 32
+)
+#
+Bug
+1567800
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
 )
 #
 Bug
