--- a/devtools/client/jsonview/test/browser.ini
+++ b/devtools/client/jsonview/test/browser.ini
@@ -121,6 +121,28 @@ test
 helpers
 .
 js
+skip
+-
+if
+=
+(
+os
+=
+=
+'
+linux
+'
+&
+&
+webrender
+&
+&
+!
+swgl
+)
+#
+bug
+1720898
 [
 browser_json_refresh
 .
