--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -676,6 +676,24 @@ results
 .
 js
 ]
+skip
+-
+if
+=
+(
+os
+=
+=
+'
+linux
+'
+&
+&
+a11y_checks
+)
+#
+Bug
+1721160
 [
 browser_net_background_update
 .
