--- a/devtools/client/shared/test/browser.ini
+++ b/devtools/client/shared/test/browser.ini
@@ -413,6 +413,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_cubic
 -
@@ -457,6 +484,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_cubic
 -
@@ -1249,6 +1303,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip
 -
@@ -1264,6 +1345,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip
 -
@@ -1271,6 +1379,37 @@ browser_html_tooltip
 .
 js
 ]
+skip
+-
+if
+=
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip
 -
@@ -1293,6 +1432,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip_arrow
 -
@@ -1308,6 +1474,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip_consecutive
 -
@@ -1354,6 +1547,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip_resize
 .
@@ -1384,6 +1604,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip_width
 -
@@ -1399,6 +1646,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_html_tooltip_xul
 -
@@ -1437,6 +1711,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_inplace
 -
@@ -1459,6 +1760,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_inplace
 -
@@ -1481,6 +1809,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_inplace
 -
@@ -1496,6 +1851,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_inplace
 -
@@ -1511,6 +1893,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_keycodes
 .
@@ -1570,6 +1979,33 @@ apple_catalina
 #
 Bug
 1713158
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+asan
+&
+&
+!
+debug
+&
+&
+!
+swgl
+&
+&
+!
+ccov
+)
+#
+Bug
+1721159
 [
 browser_outputparser
 .
