Bug 1713696 - Add a SmartBlock shim for AdNexus; r=denschub,webcompat-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D120476

UltraBlame original commit: 5ed6152e47f0d0bea33dc76735dd6eb9dd82d1da

--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -35,7 +35,7 @@ version
 "
 24
 .
-6
+7
 .
 0
 "
@@ -587,6 +587,15 @@ web_accessible_resources
 "
 :
 [
+"
+shims
+/
+adnexus
+-
+prebid
+.
+js
+"
 "
 shims
 /
