Bug 1703089 - Update WPT test metadata for Wasm exceptions JS API r=rhunt
Differential Revision: https://phabricator.services.mozilla.com/D119823

UltraBlame original commit: ac4000f104a3f82f388660ba556f4ca6e727aae2

--- a/testing/web-platform/meta/wasm/jsapi/exception/toString.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/exception/toString.tentative.any.js.ini
@@ -21,6 +21,9 @@ Exception
 ]
 expected
 :
+if
+release_or_beta
+:
 FAIL
 [
 toStringTag
@@ -60,6 +63,9 @@ Exception
 ]
 expected
 :
+if
+release_or_beta
+:
 FAIL
 [
 toStringTag
@@ -98,6 +104,9 @@ an
 Exception
 ]
 expected
+:
+if
+release_or_beta
 :
 FAIL
 [
