Bug 1721544 - adjust expectation for 2 resize-observer tests. r=boris DONTBUILD
Both are 'backlog' (only run on mozilla-central) and got modified in
bug 1599176.

Differential Revision: https://phabricator.services.mozilla.com/D120463

UltraBlame original commit: 11b528e451784b793a2298a5c218fe2c210e40ac

--- a/testing/web-platform/meta/resize-observer/observe.html.ini
+++ b/testing/web-platform/meta/resize-observer/observe.html.ini
@@ -49,6 +49,39 @@ PASS
 FAIL
 ]
 [
+test8
+:
+simple
+content
+-
+box
+observation
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+android
+"
+)
+:
+FAIL
+[
 test18
 :
 an
