Bug 1484212 - disable browser_test_focus_dialog.js on Win_64_qr_opt for frequent failures. r=intermittent-reviewers,ahal DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D120205

UltraBlame original commit: ce1481bf26b8bd6785f39b2fbfabc8d9cf4b2e5d

--- a/accessible/tests/browser/events/browser.ini
+++ b/accessible/tests/browser/events/browser.ini
@@ -103,6 +103,32 @@ browser_test_focus_dialog
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+&
+&
+!
+debug
+#
+Bug
+1484212
 [
 browser_test_focus_urlbar
 .
