Bug 1675902 - disable test_bug622117.html, test_bug622246.html, test_copypaste_disabled.html on Android_7_debug for frequent failures. r=intermittent-reviewers,ahal DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D120207

UltraBlame original commit: 74ab1023138bc8418175dc3a866868f6a5f0fa62

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -2330,6 +2330,32 @@ mochitest
 apz_test_utils
 .
 js
+skip
+-
+if
+=
+os
+=
+=
+'
+android
+'
+&
+&
+os_version
+=
+=
+'
+7
+.
+0
+'
+&
+&
+debug
+#
+Bug
+1675902
 [
 test_bug622246
 .
@@ -2354,6 +2380,32 @@ mochitest
 apz_test_utils
 .
 js
+skip
+-
+if
+=
+os
+=
+=
+'
+android
+'
+&
+&
+os_version
+=
+=
+'
+7
+.
+0
+'
+&
+&
+debug
+#
+Bug
+1675902
 [
 test_bug625722
 .
@@ -3140,6 +3192,32 @@ mochitest
 apz_test_utils
 .
 js
+skip
+-
+if
+=
+os
+=
+=
+'
+android
+'
+&
+&
+os_version
+=
+=
+'
+7
+.
+0
+'
+&
+&
+debug
+#
+Bug
+1675902
 [
 test_createHTMLDocument
 .
