--- a/toolkit/crashreporter/CrashAnnotations.yaml
+++ b/toolkit/crashreporter/CrashAnnotations.yaml
@@ -2634,6 +2634,29 @@ annotation
 type
 :
 string
+JSModuleLoadError
+:
+description
+:
+>
+The
+error
+raised
+when
+attempting
+to
+import
+a
+critical
+JS
+module
+from
+C
++
++
+type
+:
+string
 JSOutOfMemory
 :
 description
