--- a/layout/base/tests/browser.ini
+++ b/layout/base/tests/browser.ini
@@ -31,6 +31,38 @@ bug839103
 .
 css
 [
+browser_bug1701027
+-
+1
+.
+js
+]
+support
+-
+files
+=
+helper_bug1701027
+-
+1
+.
+html
+[
+browser_bug1701027
+-
+2
+.
+js
+]
+support
+-
+files
+=
+helper_bug1701027
+-
+2
+.
+html
+[
 browser_disableDialogs_onbeforeunload
 .
 js
