Backed out changeset 97b2044458d6 (bug 1721455) for causing Gecko Decision failures. CLOSED TREE
UltraBlame original commit: 2b95b4dce6463c2badf21af8d56d619bb2a105dc

--- a/taskcluster/ci/test/browsertime-mobile.yml
+++ b/taskcluster/ci/test/browsertime-mobile.yml
@@ -103,8 +103,12 @@ p2
 aarch64
 -
 shippable
+(
+?
+!
 -
 qr
+)
 .
 *
 :
@@ -453,8 +457,12 @@ m
 .
 *
 shippable
+(
+?
+!
 -
 qr
+)
 .
 *
 default
@@ -1896,6 +1904,22 @@ p2
 aarch64
 -
 shippable
+/
+opt
+:
+[
+]
+android
+-
+hw
+-
+p2
+-
+.
+*
+aarch64
+-
+shippable
 -
 qr
 /
@@ -1969,6 +1993,31 @@ android
 -
 hw
 -
+p2
+-
+.
+*
+aarch64
+-
+shippable
+(
+?
+!
+-
+qr
+)
+.
+*
+:
+[
+mozilla
+-
+central
+]
+android
+-
+hw
+-
 g5
 .
 *
@@ -2028,8 +2077,12 @@ p2
 aarch64
 -
 shippable
+(
+?
+!
 -
 qr
+)
 .
 *
 :
@@ -2125,6 +2178,31 @@ android
 -
 hw
 -
+p2
+-
+.
+*
+aarch64
+-
+shippable
+(
+?
+!
+-
+qr
+)
+.
+*
+:
+[
+mozilla
+-
+central
+]
+android
+-
+hw
+-
 g5
 .
 *
@@ -2184,8 +2262,12 @@ p2
 aarch64
 -
 shippable
+(
+?
+!
 -
 qr
+)
 .
 *
 :
