--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -2284,8 +2284,6 @@ em
 0
 -
 x86_64
--
-qr
 /
 opt
 :
@@ -2327,8 +2325,6 @@ em
 x86_64
 -
 lite
--
-qr
 /
 opt
 :
@@ -2372,8 +2368,6 @@ em
 x86_64
 -
 shippable
--
-qr
 /
 opt
 :
@@ -2419,8 +2413,6 @@ x86_64
 shippable
 -
 lite
--
-qr
 /
 opt
 :
@@ -2464,8 +2456,6 @@ em
 0
 -
 x86_64
--
-qr
 /
 debug
 :
@@ -2499,8 +2489,6 @@ em
 x86_64
 -
 lite
--
-qr
 /
 debug
 :
@@ -2534,8 +2522,6 @@ em
 0
 -
 x86_64
--
-qr
 /
 debug
 -
@@ -2564,6 +2550,115 @@ sets
 android
 -
 x86_64
+-
+tests
+android
+-
+em
+-
+7
+.
+0
+-
+x86_64
+-
+qr
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+x86_64
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+x86_64
+-
+qr
+-
+tests
+android
+-
+em
+-
+7
+.
+0
+-
+x86_64
+-
+shippable
+-
+qr
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+x86_64
+-
+shippable
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+x86_64
+-
+qr
+-
+tests
+android
+-
+em
+-
+7
+.
+0
+-
+x86_64
+-
+qr
+/
+debug
+:
+build
+-
+platform
+:
+android
+-
+x86_64
+/
+debug
+test
+-
+sets
+:
+-
+android
+-
+x86_64
+-
+qr
 -
 tests
 #
@@ -2598,6 +2693,128 @@ Android
 7
 .
 0
+android
+-
+hw
+-
+g5
+-
+7
+-
+0
+-
+arm7
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+arm
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+-
+android
+-
+hw
+-
+arm7
+-
+raptor
+-
+cpu
+-
+memory
+-
+android
+-
+hw
+-
+arm7
+-
+raptor
+-
+cpu
+-
+memory
+-
+power
+android
+-
+hw
+-
+g5
+-
+7
+-
+0
+-
+arm7
+-
+shippable
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+arm
+-
+shippable
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+-
+android
+-
+hw
+-
+arm7
+-
+raptor
+-
+cpu
+-
+memory
+-
+android
+-
+hw
+-
+arm7
+-
+raptor
+-
+cpu
+-
+memory
+-
+power
 android
 -
 hw
@@ -2752,8 +2969,6 @@ p2
 0
 -
 arm7
--
-qr
 /
 opt
 :
@@ -2825,8 +3040,6 @@ p2
 arm7
 -
 shippable
--
-qr
 /
 opt
 :
@@ -2898,8 +3111,6 @@ p2
 0
 -
 arm7
--
-qr
 /
 debug
 :
@@ -2964,21 +3175,13 @@ hw
 -
 aarch64
 -
+qr
+-
 android
 -
 hw
 -
 browsertime
--
-android
--
-hw
--
-aarch64
--
-opt
--
-unittests
 -
 android
 -
@@ -3046,6 +3249,8 @@ android
 hw
 -
 aarch64
+-
+qr
 -
 android
 -
@@ -3067,16 +3272,6 @@ hw
 -
 aarch64
 -
-pgo
--
-unittests
--
-android
--
-hw
--
-aarch64
--
 raptor
 -
 cpu
@@ -3133,6 +3328,183 @@ android
 hw
 -
 aarch64
+-
+qr
+android
+-
+hw
+-
+p2
+-
+8
+-
+0
+-
+android
+-
+aarch64
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+aarch64
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+-
+android
+-
+hw
+-
+aarch64
+-
+opt
+-
+unittests
+-
+android
+-
+hw
+-
+aarch64
+-
+raptor
+-
+cpu
+-
+memory
+-
+android
+-
+hw
+-
+aarch64
+-
+raptor
+-
+cpu
+-
+memory
+-
+power
+android
+-
+hw
+-
+p2
+-
+8
+-
+0
+-
+android
+-
+aarch64
+-
+shippable
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+aarch64
+-
+shippable
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+-
+android
+-
+hw
+-
+aarch64
+-
+pgo
+-
+unittests
+-
+android
+-
+hw
+-
+aarch64
+-
+raptor
+-
+cpu
+-
+memory
+-
+android
+-
+hw
+-
+aarch64
+-
+raptor
+-
+cpu
+-
+memory
+-
+power
+android
+-
+hw
+-
+p2
+-
+8
+-
+0
+-
+android
+-
+aarch64
+/
+debug
+:
+build
+-
+platform
+:
+android
+-
+aarch64
+/
+debug
+test
+-
+sets
+:
 -
 android
 -
@@ -3170,13 +3542,11 @@ s7
 -
 0
 -
-arm7
+android
 -
-api
+aarch64
 -
-16
--
-qr
+shippable
 /
 opt
 :
@@ -3186,9 +3556,9 @@ platform
 :
 android
 -
-api
+aarch64
 -
-16
+shippable
 /
 opt
 test
@@ -3216,10 +3586,47 @@ arm7
 api
 -
 16
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+api
+-
+16
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+android
+-
+hw
+-
+s7
+-
+8
+-
+0
+-
+arm7
+-
+api
+-
+16
 -
 shippable
--
-qr
 /
 opt
 :
@@ -3312,6 +3719,41 @@ android
 aarch64
 -
 shippable
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+android
+-
+hw
+-
+s7
+-
+8
+-
+0
+-
+android
+-
+aarch64
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+aarch64
 /
 opt
 test
