--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -2529,6 +2529,58 @@ reftest
 xpcshell
 android
 -
+x86_64
+-
+qr
+-
+tests
+:
+-
+crashtest
+-
+geckoview
+-
+junit
+-
+mochitest
+-
+media
+-
+mochitest
+-
+plain
+-
+mochitest
+-
+plain
+-
+gpu
+-
+web
+-
+platform
+-
+tests
+-
+web
+-
+platform
+-
+tests
+-
+crashtest
+-
+web
+-
+platform
+-
+tests
+-
+reftest
+-
+reftest
+android
+-
 hw
 -
 aarch64
@@ -2594,6 +2646,8 @@ android
 hw
 -
 aarch64
+-
+qr
 :
 -
 crashtest
