--- a/testing/web-platform/meta/resize-observer/observe.html.ini
+++ b/testing/web-platform/meta/resize-observer/observe.html.ini
@@ -69,7 +69,14 @@ linux
 "
 )
 :
+[
+"
 FAIL
+"
+"
+PASS
+"
+]
 if
 (
 os
@@ -81,6 +88,74 @@ android
 )
 :
 FAIL
+[
+test14
+:
+observe
+the
+same
+target
+but
+using
+a
+different
+box
+should
+override
+the
+previous
+one
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+[
+"
+FAIL
+"
+"
+PASS
+"
+]
+[
+test17
+:
+Box
+sizing
+snd
+Resize
+Observer
+notifications
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+[
+"
+FAIL
+"
+"
+PASS
+"
+]
 [
 test18
 :
