Bug 1721780 - [devtools] devtools try preset is no longer running windows jobs r=nchevobbe
The only platforms available for devtools chrome & browser mochitests are now:
- shippable
- asan
- qr

Only qr covers debug/opt/fission, so let's use this.

Differential Revision: https://phabricator.services.mozilla.com/D120580

UltraBlame original commit: c4672a17716d431cff57fb515a88dcb60d96b8c5

--- a/tools/tryselect/try_presets.yml
+++ b/tools/tryselect/try_presets.yml
@@ -298,6 +298,8 @@ target
 windows10
 -
 64
+-
+qr
 /
 "
 to
@@ -305,9 +307,10 @@ avoid
 duplicate
 jobs
 on
--
-qr
-platforms
+asan
+&
+shippable
+builds
 -
 "
 '
@@ -327,6 +330,8 @@ chrome
 windows10
 -
 64
+-
+qr
 /
 |
 '
