--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -19589,3 +19589,110 @@ if
 closed
 now
 .
+memory_watcher
+:
+on_high_memory
+:
+description
+:
+>
+This
+event
+is
+recorded
+when
+the
+memory
+situation
+is
+no
+longer
+low
+.
+The
+"
+stats
+"
+object
+consists
+of
+three
+numbers
+comma
+-
+delimited
+:
+1
+)
+how
+many
+times
+a
+tab
+was
+unloaded
+2
+)
+how
+many
+memory
+-
+pressure
+events
+were
+dispatched
+3
+)
+how
+long
+we
+were
+in
+the
+low
+-
+memory
+situation
+in
+seconds
+objects
+:
+[
+"
+stats
+"
+]
+release_channel_collection
+:
+opt
+-
+out
+expiry_version
+:
+never
+record_in_processes
+:
+[
+"
+main
+"
+]
+products
+:
+[
+"
+firefox
+"
+]
+bug_numbers
+:
+[
+1715858
+]
+notification_emails
+:
+-
+tkikuchi
+mozilla
+.
+com
