Bug 1720781 - Part 3: Don't throw for null-proto in JSOp::SuperBase. r=iain
The PR removes the `RequireObjectCoercible()` call in `MakeSuperPropertyReference`,
which means `JSOp::SuperBase` should no longer throw when the prototype is `null`.

Differential Revision: https://phabricator.services.mozilla.com/D120611

UltraBlame original commit: 561144893879b51041d72f744facc500b4fa3f18

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -4857,21 +4857,7 @@ homeObject
 Object
 result_type
 :
-Object
-#
-May
-throw
-if
-[
-[
-Prototype
-]
-]
-is
-null
-guard
-:
-true
+Value
 alias_set
 :
 custom
