Bug 1721787 - [devtools] devtools try presets are no longer running linux jobs r=ochameau
Depends on D120580

Differential Revision: https://phabricator.services.mozilla.com/D120587

UltraBlame original commit: f4add6adeb1916d41389d2f94ae3ea5e3b5b14b3

--- a/tools/tryselect/try_presets.yml
+++ b/tools/tryselect/try_presets.yml
@@ -375,7 +375,11 @@ chrome
 linux
 '
 64
+-
+qr
 /
+!
+swr
 "
 -
 "
@@ -387,6 +391,8 @@ e10s
 linux
 '
 64
+-
+qr
 /
 "
 devtools
@@ -452,7 +458,11 @@ chrome
 linux
 '
 64
+-
+qr
 /
+!
+swr
 "
 -
 "
@@ -464,6 +474,8 @@ e10s
 linux
 '
 64
+-
+qr
 /
 "
 fpush
