Bug 1720032 - Part 1: Mark Check{Return,This,ThisReinit} as throwing instructions. r=jandem
Check{Return,This} can throw an exception and therefore must record this in
their alias set.

CheckThisReinit doesn't strictly require this change, because this instruction
is currently only used in situations where a resume point is constructed anway,
but it seemed more consistent to handle it the same way as Check{Return,This}.

Differential Revision: https://phabricator.services.mozilla.com/D119630

UltraBlame original commit: 3b8899b814dc31a2046ea4216adc71fe9a4021af

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -6919,7 +6919,7 @@ guard
 true
 alias_set
 :
-none
+custom
 -
 name
 :
@@ -6940,7 +6940,7 @@ folds_to
 custom
 alias_set
 :
-none
+custom
 -
 name
 :
@@ -7060,7 +7060,7 @@ folds_to
 custom
 alias_set
 :
-none
+custom
 -
 name
 :
