--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -31256,22 +31256,9 @@ basic
 type
 :
 bool
-#
-if
-defined
-(
-MOZ_WIDGET_ANDROID
-)
 value
 :
-true
-#
-else
-value
-:
-IS_NOT_EARLY_BETA_OR_EARLIER
-#
-endif
+false
 mirror
 :
 once
