--- a/layout/base/tests/mochitest.ini
+++ b/layout/base/tests/mochitest.ini
@@ -2234,6 +2234,30 @@ bug1637476
 ref
 .
 html
+bug1663475
+-
+1
+.
+html
+bug1663475
+-
+1
+-
+ref
+.
+html
+bug1663475
+-
+2
+.
+html
+bug1663475
+-
+2
+-
+ref
+.
+html
 bug1670531
 -
 1
