--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -3921,6 +3921,60 @@ manifests
 .
 git
 '
+esr
+.
+*
+:
+by
+-
+release
+-
+level
+:
+production
+:
+'
+git
+github
+.
+com
+:
+mozilla
+-
+partners
+/
+esr
+-
+repack
+-
+manifests
+.
+git
+'
+staging
+:
+'
+git
+github
+.
+com
+:
+moz
+-
+releng
+-
+automation
+-
+stage
+/
+esr
+-
+repack
+-
+manifests
+.
+git
+'
 release
 -
 eme
