--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -754,6 +754,21 @@ GeckoView
 bug
 1538348
 [
+test_ext_downloads_cookieStoreId
+.
+js
+]
+skip
+-
+if
+=
+os
+=
+=
+"
+android
+"
+[
 test_ext_downloads_download
 .
 js
