Bug 1720608 - Extend credit card telemetry. r=dimi
Differential Revision: https://phabricator.services.mozilla.com/D120403

UltraBlame original commit: c0b570fee8aba019c359b1ec139f7cbd0b1a29ae

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -3642,18 +3642,19 @@ bug_numbers
 [
 1653073
 1653083
+1720608
 ]
 notification_emails
 :
 [
 "
-jmathies
+tgiles
 mozilla
 .
 com
 "
 "
-chsiang
+dlee
 mozilla
 .
 com
@@ -3662,7 +3663,7 @@ com
 expiry_version
 :
 "
-93
+103
 "
 products
 :
@@ -3731,18 +3732,19 @@ bug_numbers
 [
 1653073
 1654167
+1720608
 ]
 notification_emails
 :
 [
 "
-jmathies
+tgiles
 mozilla
 .
 com
 "
 "
-chsiang
+dlee
 mozilla
 .
 com
@@ -3751,7 +3753,7 @@ com
 expiry_version
 :
 "
-93
+103
 "
 products
 :
@@ -3817,18 +3819,19 @@ bug_numbers
 [
 1653073
 1653162
+1720608
 ]
 notification_emails
 :
 [
 "
-jmathies
+tgiles
 mozilla
 .
 com
 "
 "
-chsiang
+dlee
 mozilla
 .
 com
@@ -3837,7 +3840,7 @@ com
 expiry_version
 :
 "
-93
+103
 "
 products
 :
