Bug 1693385 - Support manifest.host_permissions for MV3 r=mixedpuppy
Differential Revision: https://phabricator.services.mozilla.com/D118305

UltraBlame original commit: 540fd6bb70bd35f1d7de0b4e0875c894ce47a9c0

--- a/toolkit/components/extensions/schemas/manifest.json
+++ b/toolkit/components/extensions/schemas/manifest.json
@@ -990,18 +990,34 @@ permissions
 :
 {
 "
+default
+"
+:
+[
+]
+"
+optional
+"
+:
+true
+"
+choices
+"
+:
+[
+{
+"
+max_manifest_version
+"
+:
+2
+"
 type
 "
 :
 "
 array
 "
-"
-default
-"
-:
-[
-]
 "
 items
 "
@@ -1022,11 +1038,91 @@ onError
 warn
 "
 }
+}
+{
+"
+min_manifest_version
+"
+:
+3
+"
+type
+"
+:
+"
+array
+"
+"
+items
+"
+:
+{
+"
+ref
+"
+:
+"
+Permission
+"
+"
+onError
+"
+:
+"
+warn
+"
+}
+}
+]
+}
+"
+host_permissions
+"
+:
+{
+"
+min_manifest_version
+"
+:
+3
+"
+type
+"
+:
+"
+array
+"
+"
+items
+"
+:
+{
+"
+ref
+"
+:
+"
+MatchPattern
+"
+"
+onError
+"
+:
+"
+warn
+"
+}
 "
 optional
 "
 :
 true
+"
+default
+"
+:
+[
+]
 }
 "
 optional_permissions
