Bug 1722031 - Tweak accent-color foreground computation and let it ride the trains. r=mstange
The accent-color computation right now chooses between black and white,
which is not ideal.

I tried to make it so that authors could choose the foreground colors in
the linked CSSWG issue from the comment, but that didn't go anywhere.

I think choosing a contrasting color that is in-line and contrasting
enough with the accent-color chosen by the page when darkening is better
than just black or white.

If we want the black-or-white behavior we can just change
layout.css.accent-color.target-contrast-ratio to something large enough.

https://accent-color.glitch.me/ is a nice playground to see this patch
in action.

Differential Revision: https://phabricator.services.mozilla.com/D120723

UltraBlame original commit: 7a7d9a6cc5134befe051de531f8f04c1b76e0f7b

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -41490,13 +41490,159 @@ type
 RelaxedAtomicBool
 value
 :
-IS_NIGHTLY_BUILD
+true
 mirror
 :
 always
 rust
 :
 true
+#
+The
+minimum
+contrast
+ratio
+between
+the
+accent
+color
+foreground
+and
+background
+#
+colors
+.
+#
+#
+We
+don
+'
+t
+use
+this
+for
+text
+so
+we
+need
+a
+contrast
+of
+at
+least
+AA
+(
+for
+user
+#
+interface
+components
+and
+graphical
+objects
+)
+which
+per
+WCAG
+is
+3
+:
+1
+-
+name
+:
+layout
+.
+css
+.
+accent
+-
+color
+.
+min
+-
+contrast
+-
+ratio
+type
+:
+float
+value
+:
+3
+.
+0
+mirror
+:
+always
+#
+The
+target
+contrast
+ratio
+between
+the
+accent
+color
+foreground
+and
+background
+#
+colors
+when
+darkening
+.
+#
+#
+We
+aim
+a
+bit
+further
+than
+the
+minimum
+contrast
+ratio
+which
+seems
+to
+provide
+#
+nice
+results
+in
+practice
+.
+-
+name
+:
+layout
+.
+css
+.
+accent
+-
+color
+.
+darkening
+-
+target
+-
+contrast
+-
+ratio
+type
+:
+float
+value
+:
+6
+.
+0
+mirror
+:
+always
 #
 Whether
 the
