--- a/testing/web-platform/meta/screen-capture/permissions-policy.https.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy.https.html.ini
@@ -1,5 +1,5 @@
 [
-feature
+permissions
 -
 policy
 .
@@ -17,7 +17,7 @@ display
 -
 capture
 "
-feature
+permissions
 policy
 [
 "
@@ -42,7 +42,7 @@ display
 -
 capture
 "
-feature
+permissions
 policy
 [
 "
@@ -70,7 +70,7 @@ android
 :
 FAIL
 [
-Feature
+permissions
 policy
 "
 display
@@ -118,7 +118,7 @@ display
 -
 capture
 "
-feature
+permissions
 policy
 [
 "
