Bug 1597285 use test_driver.set_test_context() in iframe documents r=jib
https://web-platform-tests.org/writing-tests/testdriver.html#using-testdriver-in-other-browsing-contexts

Depends on D119602

Differential Revision: https://phabricator.services.mozilla.com/D119603

UltraBlame original commit: 5b131f57a8d5c045333d39e731e19ea577b6095a

--- a/testing/web-platform/meta/screen-capture/permissions-policy.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy.https.sub.html.ini
@@ -9,9 +9,6 @@ sub
 .
 html
 ]
-expected
-:
-TIMEOUT
 [
 Default
 "
@@ -36,7 +33,7 @@ iframes
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Default
 "
@@ -94,25 +91,17 @@ allow
 attribute
 .
 ]
-disabled
+expected
 :
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
+if
+os
 =
-1596585
+=
+"
+android
+"
+:
+FAIL
 [
 Default
 "
@@ -135,22 +124,14 @@ origin
 iframes
 .
 ]
-disabled
+expected
 :
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
+if
+os
 =
-1596585
+=
+"
+android
+"
+:
+FAIL
