Bug 1597285 test allow attribute can disable default-self permissions policies in same-origin frames r=jib
Differential Revision: https://phabricator.services.mozilla.com/D119606

UltraBlame original commit: 8605099395b23f367ecce22137320cb9ad819e80

--- a/testing/web-platform/meta/screen-capture/permissions-policy-audio+video.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy-audio+video.https.sub.html.ini
@@ -139,3 +139,29 @@ android
 "
 :
 FAIL
+[
+permissions
+policy
+"
+display
+-
+capture
+"
+can
+be
+disabled
+in
+same
+-
+origin
+iframes
+using
+"
+allow
+"
+attribute
+.
+]
+expected
+:
+FAIL
