--- a/testing/web-platform/meta/screen-capture/permissions-policy-video.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy-video.https.sub.html.ini
@@ -137,3 +137,29 @@ android
 "
 :
 FAIL
+[
+permissions
+policy
+"
+display
+-
+capture
+"
+can
+be
+disabled
+in
+same
+-
+origin
+iframes
+using
+"
+allow
+"
+attribute
+.
+]
+expected
+:
+FAIL
