--- a/browser/base/content/test/menubar/browser.ini
+++ b/browser/base/content/test/menubar/browser.ini
@@ -7,16 +7,42 @@ browser_file_menu_import_wizard
 js
 ]
 [
-browser_window_menu_list
+browser_file_share
 .
 js
 ]
-skip
+run
 -
 if
 =
 os
-!
+=
+=
+"
+mac
+"
+#
+Mac
+only
+feature
+support
+-
+files
+=
+file_shareurl
+.
+html
+[
+browser_window_menu_list
+.
+js
+]
+run
+-
+if
+=
+os
+=
 =
 "
 mac
