Bug 1720698: Add Google Doc canvas preview to page load site list r=perftest-reviewers,Bebe
Differential Revision: https://phabricator.services.mozilla.com/D120323

UltraBlame original commit: 938c7946c1c78b1b43feeb288c0b148b10bf7818

--- a/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
+++ b/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
@@ -466,6 +466,56 @@ sharing
 [
 google
 -
+docs
+-
+canvas
+]
+test_url
+=
+https
+:
+/
+/
+docs
+.
+google
+.
+com
+/
+document
+/
+d
+/
+1vUnn0ePU
+-
+ynArE1OdxyEHXR2G0sl74ja_st_4OOzlgE
+/
+preview
+playback_version
+=
+6
+.
+0
+.
+2
+playback_pageset_manifest
+=
+mitm6
+-
+linux
+-
+firefox
+-
+google
+-
+docs
+-
+canvas
+.
+manifest
+[
+google
+-
 mail
 ]
 test_url
