Bug 1714200: require signed builds to run tests on M1 platforms. r=jmaher
Depends on D120751

Differential Revision: https://phabricator.services.mozilla.com/D120752

UltraBlame original commit: f0b9f62c9b958040385ad593face95672086da51

--- a/taskcluster/ci/test/kind.yml
+++ b/taskcluster/ci/test/kind.yml
@@ -337,6 +337,28 @@ true
 default
 :
 false
+mozharness
+:
+requires
+-
+signed
+-
+builds
+:
+by
+-
+test
+-
+platform
+:
+macosx1100
+.
+*
+:
+true
+default
+:
+false
 fetches
 :
 toolchain
