Bug 1718292 - Part 1: Disable failing xpcshell tests on Windows 10 2004 r=jmaher,necko-reviewers,dragana
Differential Revision: https://phabricator.services.mozilla.com/D119633

UltraBlame original commit: adf6328996d3088b50480c7690f47bfe9e076fbd

--- a/extensions/permissions/test/unit/xpcshell.ini
+++ b/extensions/permissions/test/unit/xpcshell.ini
@@ -31,6 +31,14 @@ test_permmanager_expiration
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718292
 [
 test_permmanager_getAllByTypeSince
 .
@@ -61,6 +69,14 @@ test_permmanager_removeall
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718292
 [
 test_permmanager_removebytype
 .
@@ -204,3 +220,11 @@ test_permmanager_remove_add_update
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718292
