--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -753,6 +753,10 @@ GeckoView
 -
 bug
 1538348
+win10_2004
+#
+Bug
+1718292
 [
 test_ext_downloads_cookieStoreId
 .
@@ -768,6 +772,10 @@ os
 "
 android
 "
+win10_2004
+#
+Bug
+1718292
 [
 test_ext_downloads_download
 .
