Bug 1718297 - Part 1: Disable failing mochitest-media tests on Windows 10 2004 r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D119836

UltraBlame original commit: bba252822e8f35c6ba85c8841e53a988d8dc648e

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -6696,6 +6696,13 @@ android
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6717,6 +6724,13 @@ android
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6765,6 +6779,13 @@ android
 bug
 1149374
 apple_silicon
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6786,6 +6807,13 @@ android
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6831,6 +6859,13 @@ win
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6852,6 +6887,13 @@ android
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6897,6 +6939,13 @@ mac
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6955,6 +7004,13 @@ android
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -6992,6 +7048,13 @@ linux
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -7014,6 +7077,13 @@ android
 bug
 1149374
 apple_silicon
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
@@ -7242,6 +7312,13 @@ android
 #
 bug
 1149374
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 scheme
 =
 https
