--- a/dom/media/webrtc/tests/mochitests/mochitest.ini
+++ b/dom/media/webrtc/tests/mochitests/mochitest.ini
@@ -990,6 +990,17 @@ test_peerConnection_basicAudio
 .
 html
 ]
+skip
+-
+if
+=
+win10_2004
+&
+&
+asan
+#
+Bug
+1718297
 [
 test_peerConnection_basicAudio_forced_lower_rate
 .
@@ -1067,6 +1078,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -1202,6 +1217,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -1252,6 +1271,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -1302,6 +1325,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -1352,6 +1379,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -1402,6 +1433,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -1452,6 +1487,10 @@ android
 bug
 1266217
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
@@ -2773,6 +2812,10 @@ Bug
 Bug
 1521117
 )
+win10_2004
+#
+Bug
+1718297
 scheme
 =
 http
