--- a/toolkit/components/extensions/test/xpcshell/xpcshell-remote.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-remote.ini
@@ -250,3 +250,17 @@ processor
 '
 x86_64
 '
+[
+test_ext_background_service_worker
+.
+js
+]
+prefs
+=
+extensions
+.
+backgroundServiceWorker
+.
+enabled
+=
+true
