Bug 1639020 - Disable browser_filter-editor-04.js and browser_flame-graph-01.js for frequent failures on linux and windows webrender. r=intermittent-reviewers,jmaher DONTBUILD
browser_filter-editor-04.js is frequently failing on windows/linux webrender platforms together with browser_flame-graph-01.js on windows webrender ones.

Differential Revision: https://phabricator.services.mozilla.com/D120778

UltraBlame original commit: 448185fa06ffcad99de802e1e8ef17c12aebd70e

--- a/devtools/client/shared/test/browser.ini
+++ b/devtools/client/shared/test/browser.ini
@@ -536,6 +536,38 @@ editor
 .
 js
 ]
+skip
+-
+if
+=
+(
+(
+os
+=
+=
+"
+linux
+"
+|
+|
+os
+=
+=
+"
+win
+"
+)
+&
+&
+webrender
+&
+&
+!
+debug
+)
+#
+Bug
+1639020
 [
 browser_filter
 -
@@ -626,6 +658,28 @@ graph
 .
 js
 ]
+skip
+-
+if
+=
+(
+os
+=
+=
+"
+win
+"
+&
+&
+webrender
+&
+&
+!
+debug
+)
+#
+Bug
+1639020
 [
 browser_flame
 -
