Bug 1713692 - Add a SmartBlock shim for Google PageAd; r=ksenia,webcompat-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D120875

UltraBlame original commit: 37ad29e721ab070e36cc85655fdf7a3de44cb406

--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -35,7 +35,7 @@ version
 "
 24
 .
-10
+11
 .
 0
 "
@@ -719,6 +719,17 @@ shims
 google
 -
 ima
+.
+js
+"
+"
+shims
+/
+google
+-
+page
+-
+ad
 .
 js
 "
