--- a/accessible/tests/browser/states/browser.ini
+++ b/accessible/tests/browser/states/browser.ini
@@ -58,6 +58,32 @@ browser_test_visibility
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+&
+&
+!
+debug
+#
+bug
+1652192
 [
 browser_offscreen_element_in_out_of_process_iframe
 .
