Bug 1683265 - disable browser_toolbox_zoom.js on windows_10_64_qr for frequent failures. r=intermittent-reviewers,bhearsum DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D120887

UltraBlame original commit: b835a08ea21f81402be98841663353ef29710e64

--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -890,6 +890,32 @@ browser_toolbox_zoom
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+&
+&
+!
+debug
+#
+bug
+1683265
 [
 browser_toolbox_zoom_popup
 .
