Bug 1707401 - disable browser_autocomplete_import.js on windows_10_64_qr for frequent failures. r=intermittent-reviewers,bhearsum DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D120890

UltraBlame original commit: ec3b8abd3e809d0725f1d50a5dfcb5288d32fe5f

--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -178,6 +178,28 @@ new
 Fission
 platform
 triage
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+&
+&
+!
+debug
+#
+Bug
+1707401
 [
 browser_autocomplete_insecure_warning
 .
