Bug 1722113 - Expose sanitized UNMASKED_RENDERER as RENDERER. r=lsalzman,tjr
Add prefs:
* webgl.enable-renderer-query: true
* webgl.sanitize-unmasked-renderer: false
Rename prefs:
* webgl.renderer-string-override => webgl.override-unmasked-renderer
* webgl.vendor-string-override => webgl.override-unmasked-vendor

webgl.enable-renderer-query is treated as false if RFP is enabled.
webgl.override-unmasked-renderer overrides UNMASKED_RENDERER and
is then sanitized for RENDERER if enabled.

Differential Revision: https://phabricator.services.mozilla.com/D120775

UltraBlame original commit: f9ede7eddaf26445633bc3a70f0e7d5805960c0d

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -70099,7 +70099,7 @@ type
 RelaxedAtomicBool
 value
 :
-true
+false
 mirror
 :
 always
@@ -70138,6 +70138,25 @@ RelaxedAtomicBool
 value
 :
 false
+mirror
+:
+always
+-
+name
+:
+webgl
+.
+enable
+-
+renderer
+-
+query
+type
+:
+RelaxedAtomicBool
+value
+:
+true
 mirror
 :
 always
@@ -70469,6 +70488,46 @@ name
 :
 webgl
 .
+override
+-
+unmasked
+-
+renderer
+type
+:
+String
+value
+:
+"
+"
+mirror
+:
+never
+-
+name
+:
+webgl
+.
+override
+-
+unmasked
+-
+vendor
+type
+:
+String
+value
+:
+"
+"
+mirror
+:
+never
+-
+name
+:
+webgl
+.
 power
 -
 preference
@@ -70491,6 +70550,25 @@ webgl
 prefer
 -
 16bpp
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+-
+name
+:
+webgl
+.
+sanitize
+-
+unmasked
+-
+renderer
 type
 :
 RelaxedAtomicBool
