Bug 1720710 - Add system-ui boilerplate. r=jfkthame
Alias -apple-system to it, and put it behind a pref for now. This is
pretty boring (read: uncontroversial hopefully) code. The follow-up work
is modifying StaticPresData to look up the fonts using system APIs,
probably. Maybe a bit more work if on macOS they can't be named.

Differential Revision: https://phabricator.services.mozilla.com/D119984

UltraBlame original commit: 6d6227df765e5f85c1045dfcbaeb35aed722f220

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -41752,6 +41752,41 @@ always
 #
 Whether
 the
+system
+-
+ui
+generic
+family
+is
+enabled
+.
+-
+name
+:
+layout
+.
+css
+.
+system
+-
+ui
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+rust
+:
+true
+#
+Whether
+the
 bloom
 filter
 optimization
