--- a/dom/security/test/https-first/mochitest.ini
+++ b/dom/security/test/https-first/mochitest.ini
@@ -119,6 +119,18 @@ file_break_endless_upgrade_downgrade_loop
 .
 sjs
 [
+test_multiple_redirection
+.
+html
+]
+support
+-
+files
+=
+file_multiple_redirection
+.
+sjs
+[
 test_form_submission
 .
 html
