--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -35,7 +35,7 @@ version
 "
 24
 .
-11
+12
 .
 0
 "
@@ -587,6 +587,13 @@ web_accessible_resources
 "
 :
 [
+"
+shims
+/
+adform
+.
+js
+"
 "
 shims
 /
