Bug 1722299 - Initial support for the color-scheme CSS property. r=mstange
Add initial support for the color-scheme CSS property, allowing pages to
choose between light and dark system colors per-element, and such.

Things that are left to do so that this can be enabled by default:

 * Dark system colors on Windows / Android / Standins.
 * Dark Canvas/CanvasText/Link visited colors (which right now are set
   via PreferenceSheet).
 * Dark form controls in nsNativeBasicTheme.
 * Processing the color-scheme meta tag to fill-in
   Document::mColorSchemeBits.

But this seems like enough progress to be landable on its own.

Differential Revision: https://phabricator.services.mozilla.com/D120843

UltraBlame original commit: 06efc0ecdd65c0c4d6c452839d4c3f05fd1d26de

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -4523,6 +4523,30 @@ WillChange
 gecko
 =
 "
+StyleColorScheme
+"
+servo
+=
+"
+crate
+:
+:
+values
+:
+:
+specified
+:
+:
+color
+:
+:
+ColorScheme
+"
+}
+{
+gecko
+=
+"
 StyleTextDecorationLine
 "
 servo
