--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -41498,6 +41498,44 @@ rust
 :
 true
 #
+Whether
+the
+color
+-
+scheme
+css
+property
+and
+meta
+tags
+are
+enabled
+.
+-
+name
+:
+layout
+.
+css
+.
+color
+-
+scheme
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+rust
+:
+true
+#
 The
 minimum
 contrast
